# arc

./: .gitignore  README.md  app.go  arc.go  dial_unix.go  dial_windows.go  go.mod  ipcbridge.go  webview.go  window.go  wire.go
backup/: app.go  go.mod  web.go
backup/cli/: config.go  storekit.go  templates.go
backup/cmd/: README.md
backup/cmd/apple-billing/: arc.json  main.go
backup/cmd/arc/: README.md
backup/cmd/embedded-webview/: main.go
backup/cmd/ipc/: main.go
backup/docs/: arch.md  embedded_webview.md  features.md
backup/internal/runtime/: logger.go  prebuild.go  process.go  transport.go  transport_windows.go  webview2_other.go
backup/libarc/: CMakeLists.txt  libarc_v2.md
backup/libarc/include/: billing.h  host_channel.h  logger.h
backup/libarc/src/: arc_host_main.cpp  arc_runner.h  host_channel_win.cpp  main.cpp
backup/libarc/src/browser/linux/: navigation.cpp  scheme.cpp  scheme.h  webview.cpp  window.cpp
backup/libarc/src/browser/mac/: window.mm
backup/libarc/src/browser/shared/: mime.h  webview.h
backup/libarc/src/browser/win/: scheme.cpp  shim.h  webview.cpp  window.cpp  wstring.h
backup/tools/: README.md  prebuild.go
backup/window/: window.go
backup2/: arc.go  dial_unix.go  dial_windows.go
backup2/cmd/ipc/: main.go
backup2/ipc/: ipc.go
backup2/window/: window.go
billing/: billing.go
cli/: arc_json.go  build.go  config.go  helpers.go  platform.go  steps.go  templates.go
cmd/: go.mod  main.go
cmd/apple-billing/: README.md  arc.json  go.mod  main.go
cmd/arc/: README.md  go.mod  main.go
cmd/billing/apple-store/: go.mod  main.go
cmd/billing/microsoft-store/: go.mod  main.go
cmd/cli/: README.md  go.mod  main.go
cmd/embedded-webview/: go.mod  main.go  main_drag.go
cmd/ipc/: go.mod  main.go
docs/: arch.md  embedded_webview.md
integrations/billing/: app.go  apple_store.go  apple_store_stub.go  apple_types.go  microsoft_store.go  microsoft_store_stub.go  microsoft_types.go
internal/runtime/: bundle.go  framing.go  prebuild.go  process.go  transport.go  transport_unix.go  transport_windows.go  util.go  webview2_windows.go
internal/webapp/: server.go  ws.go
ipc/: ipc.go
libarc/: CMakeLists.txt  README.md
libarc/include/: host_channel.h
libarc/include/arc/: arc.h
libarc/src/: arc.cpp  arc_runner.h  host_channel_unix.cpp  host_channel_win.cpp  main.cpp
libarc/src/browser/linux/: impl.h  ipc.cpp  shim.h
libarc/src/browser/mac/: impl.h  ipc.mm  shim.h  webview.mm
libarc/src/browser/shared/: webview.h
libarc/src/browser/win/: impl.h  ipc.cpp  scheme.h  webview.cpp
packaging/: config.go  linux.go  macos.go  packaging.go  util.go  windows.go
packaging/internal/archive/: archive.go
packaging/internal/plist/: plist.go
packaging/internal/sign/: sign.go
packaging/internal/storekit/: storekit.go
renderer/: CMakeLists.txt  README.md  vcpkg.json
renderer/include/: host_channel.h
renderer/src/: host_channel_unix.cpp  host_channel_win.cpp  logger.cpp  main.cpp
renderer/src/browser/linux/: billing.cpp  impl.h  webview.cpp
renderer/src/browser/mac/: billing.mm  navigation.mm  scheme.h  scheme.mm
renderer/src/browser/shared/: str_escape.h  types.h
renderer/src/browser/win/: billing.cpp  navigation.cpp  window.cpp
tools/: create-package.go  prebuild.go
webview/: webview.go
window/: window.go
